fix alignment of new ad frame

--- a/css/style_desktop.less
+++ b/css/style_desktop.less
@@ -46,8 +46,11 @@ footer {
 }
 
 figure {
-    width: 33%;
     box-shadow: 1px 2px 3px #a07272;
+}
+
+figure.fig_full {
+    width: auto;
 }
 
 figure.fig_half {
@@ -55,11 +58,12 @@ figure.fig_half {
 }
 
 figure img.worldmap {
-    height: 177px;
+    width: auto;
+    height: 226px;
 }
 
 .gallery_article div {
-    top:-100px;
+    top: -100px;
     position: relative;
 }
 
